--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     types: [closed]
     branches:
-      - main
+      - dev
 
 jobs:
   aws-deploy:
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: main
+          ref: dev
       - uses: actions/setup-node@v1
       - run: npm install
 
